# RTChess

./: CMakeLists.txt  main.cpp
ComandsForTest/: attacked_move_test.txt  chess_speedrun.txt  create_pawn_structure.txt  enpasssant_test.txt  going_forward.txt
Visuals/: Frontend.cpp  Frontend.h
Visuals/ServerLogic/: MyServer.cpp  MyServer.h
Visuals/ServerLogic/CommonChessLogic/: ChessManager.cpp  ChessManager.h
images/: Img.qrc
include/: ChessManager.h  Frontend.h  MyServer.h  timemanager.h
src/: ChessManager.cpp  main.cpp
